@@ -64,6 +64,7 @@ Player::Player
 	m_frontier_style_index(0),
 	m_flag_style_index    (0),
 	m_team_number(0),
+	m_team_player_uptodate(false),
 	m_see_all           (false),
 	m_plnum             (plnum),
 	m_tribe             (tribe_descr),
@@ -149,6 +150,7 @@ void Player::allocate_map()
 void Player::set_team_number(TeamNumber team)
 {
 	m_team_number = team;
+	m_team_player_uptodate = false;
 }
 
 /**
@@ -160,6 +162,27 @@ bool Player::is_hostile(const Player & other) const
 	return
 		&other != this &&
 		(!m_team_number || m_team_number != other.m_team_number);
+}
+
+/**
+ * Updates the vector containing allied players
+ */
+void Player::update_team_players() {
+	m_team_player.clear();
+	m_team_player_uptodate = true;
+
+	if (!m_team_number)
+		return;
+
+	for (Player_Number i = 1; i <= MAX_PLAYERS; ++i) {
+		Player * other = egbase().get_player(i);
+		if (!other)
+			continue;
+		if (other == this)
+			continue;
+		if (m_team_number == other->m_team_number)
+			m_team_player.push_back(other);
+	}
 }
 
 Message_Id Player::add_message
@@ -873,7 +896,8 @@ void Player::see_node
 	(Map              const &       map,
 	 Widelands::Field const &       first_map_field,
 	 FCoords                  const f,
-	 Time                     const gametime)
+	 Time                     const gametime,
+	 bool                     const forward)
 throw ()
 {
 	assert(0 <= f.x);
@@ -882,6 +906,15 @@ throw ()
 	assert(f.y < map.get_height());
 	assert(&map[0] <= f.field);
 	assert           (f.field < &first_map_field + map.max_index());
+
+	// If this is not already a forwarded call, we should informa allied players
+	// as well of this change
+	if (!m_team_player_uptodate)
+		update_team_players();
+	if (!forward && m_team_player.size()) {
+		for (uint8_t j = 0; j < m_team_player.size(); ++j)
+			m_team_player[j]->see_node(map, first_map_field, f, gametime, true);
+	}
 
 	Field & field = m_fields[f.field - &first_map_field];
 	assert(m_fields <= &field);
@@ -893,6 +926,29 @@ throw ()
 		rediscover_node(map, first_map_field, f);
 	fvision ++;
 	field.vision = fvision;
+}
+
+void Player::unsee_node
+	(Map_Index const i, Time const gametime, bool const forward)
+throw ()
+{
+	Field & field = m_fields[i];
+	if(field.vision <= 1) // Already doesn't see this
+		return;
+
+	// If this is not already a forwarded call, we should informa allied players
+	// as well of this change
+	if (!m_team_player_uptodate)
+		update_team_players();
+	if (!forward && m_team_player.size()) {
+		for (uint8_t j = 0; j < m_team_player.size(); ++j)
+			m_team_player[j]->unsee_node(i, gametime, true);
+	}
+
+		--field.vision;
+	if (field.vision == 1)
+		field.time_node_last_unseen = gametime;
+	assert(1 <= field.vision);
 }
 
 
