@@ -1,5 +1,6 @@
 ### Build 16 (until now)
 - Improved and added a lot new animations for workers!
+- Implemented teamview for allied players
 - Gave foresters more intelligence - now they do not remove young trees to
   replant another anymore and plant the trees that suit the terrain the best.
 - Added host commands like /announce, /kick, ... (type /help in chat window
